update property dependencies